==> Katinor/SuperGreatCan/kernel/driver/lib_at86rf/src/PAL/XMEGA/Generic/Src/pal_uart.c <==
#include "../../../../../ubiconfig.h"
#include <stdint.h>
#include "../../../Inc/pal.h"
#include "../../../../Include/_pal_config.h"
#include "../Inc/pal_uart.h"

void sio_uart_0_init(uint32_t baud_rate)
{
    /* Calculate corresponding value for baud rateregister. */
    uint16_t baud_rate_reg = UART_BAUD(baud_rate);

    /* Init Port D pins */
    /* PD3 (TXD0) as output. */
    PORTD.DIRSET = PIN3_bm;
    /* PD2 (RXD0) as input. */
    PORTD.DIRCLR = PIN2_bm;

    /*
     * Microcontroller's USART register is updated to
     * run at the given baud rate.
     */
    /* 4 most siginificant bits of the Baud rate, BSCALE = 0 */
    USARTD0.BAUDCTRLB = (baud_rate_reg >> 8) & 0xFF;
    USARTD0.BAUDCTRLA = (uint8_t)baud_rate_reg;

    /* Faster async mode (UART clock divider = 8, instead of 16) */
    /* Enable Rx and Tx */
    USARTD0.CTRLB = USART_RXEN_bm | USART_TXEN_bm | USART_CLK2X_bm;

    /* Set 8N1  */
    USARTD0.CTRLC = USART_CHSIZE1_bm | USART_CHSIZE0_bm;

    /*
     * Receive and transmit interrrupt are enabled.
     */
    USARTD0.CTRLA = USART_RXCINTLVL_gm | USART_TXCINTLVL_gm;
}

void sio_uart_1_init(uint32_t baud_rate)
{
    /* Calculate corresponding value for baud rateregister. */
    uint16_t baud_rate_reg = UART_BAUD(baud_rate);

    /* Init Port D pins */
    /* PD3 (TXD1) as output. */
    PORTD.DIRSET = PIN7_bm;
    /* PD2 (RXD1) as input. */
    PORTD.DIRCLR = PIN6_bm;

    /*
     * Microcontroller's USART register is updated to
     * run at the given baud rate.
     */
    /* 4 most siginificant bits of the Baud rate, BSCALE = 0 */
    USARTD1.BAUDCTRLB = (baud_rate_reg >> 8) & 0xFF;
    USARTD1.BAUDCTRLA = (uint8_t)baud_rate_reg;

    /* Faster async mode (UART clock divider = 8, instead of 16) */
    /* Enable Rx and Tx */
    USARTD1.CTRLB = USART_RXEN_bm | USART_TXEN_bm | USART_CLK2X_bm;

    /* Set 8N1  */
    USARTD1.CTRLC = USART_CHSIZE1_bm | USART_CHSIZE0_bm;

    /*
     * Receive and transmit interrrupt are enabled.
     */
    USARTD1.CTRLA = USART_RXCINTLVL_gm | USART_TXCINTLVL_gm;
}
